--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,12 @@
 /[Bb]uild/
 /[Bb]uilds/
 /Assets/AssetStoreTools*
-/Assets/AutoStreamerData*
+/Assets/InstantGameData*
 /Assets/Plugins/AssetBundles-Browser*
 /ServerData*
 /_win64/
 /_android/
+/IGOutput/
 
 # Visual Studio 2015 cache directory
 /.vs/
